--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+<h1>BREAKING BAD</h1>
+<h2>Personajes</h2>
+<button id="btn">Ver</button>
+
+<section id="cardsContainer"></section>
+
+
+
+
     <script src="index.js"></script>
 </body>
 </html>
